lang/tests/compile_fail/pod_string_n_exceeds_pfx.stderr
error[E0080]: evaluation panicked: PodString<N, PFX>: N exceeds the maximum value representable by the PFX-byte length prefix
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `quasar_lang::String::<256>::_CAP_CHECK` failed here
  |
 ::: $WORKSPACE/pod/src/string.rs
  |
  | /         assert!(
  | |             N <= max_n_for_pfx(PFX),
  | |             "PodString<N, PFX>: N exceeds the maximum value representable by the PFX-byte length \
  | |              prefix"
  | |         );
  | |_________- in this macro invocation

note: erroneous constant encountered
 --> $WORKSPACE/pod/src/string.rs
  |
  |     pub const VALID: () = Self::_CAP_CHECK;
  |                           ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> tests/compile_fail/pod_string_n_exceeds_pfx.rs:6:15
  |
6 | const _: () = PodString::<256, 1>::VALID;
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^
